# Qwen-coder

./: cloud-init.yaml  requirements.txt  setup.py
qwen_flash_attention/: =2.0.0  =5.9.0  Dockerfile  README.md  __init__.py  agent_routes.py  api_server.py  api_spec.md  autogen_provider.py  autogen_router.py  autogen_routes.py  autogen_schemas.py  browser_session.py  chat_routes.py  code_model.py  config.py  convert_dataset.py  cuda_shared_memory.py  cuda_test.py  cuda_utils.py  dataset_info.json  detailed_gpu_check.py  docker-compose.yml  document_manager.py  finetune_llama_factory.py  finetune_requirements.txt  finetune_rust.py  gpu_check.py  group_routes.py  llama_factory_requirements.txt  mcp_server.py  metamodel.py  middleware.py  model.py  model_routes.py  openai_wrapper.py  rag_agent.py  rag_autogen.py  rag_provider.py  requirements.txt  (+13 more)
qwen_flash_attention/cuda_kernels/: CMakeLists.txt  build.bat  build.sh  build_cuda.sh  compile.bat  memory_manager.cu  memory_manager.cuh  memory_manager.def  memory_manager.exp  memory_manager.lib  test_memory_manager.cu  test_memory_manager.exp  test_memory_manager.lib
qwen_flash_attention/mcp/: context_server.py  model_server.py  tools.py
qwen_flash_attention/mcp/tests/: README.md  conftest.py  pytest.ini  run_tests.py  test_api.py  test_endpoints.py  test_functional.py  test_integration.py  test_system.py
qwen_flash_attention/static/: index.html
shared_embeddings/: __init__.py  config.py  utils.py  vector_store.py
